--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="interests-container container-block">
                     <h2 class="container-block-title">Activités extra-professionnelles</h2>
                     <ul class="list-unstyled interests-list">
-                        <li>Plongée sous-marine (Niveau 2)</li>
+                        <li>Plongée sous-marine</li>
                         <li>Apnée / natation</li>
                         <li>Pratique du piano et la guitare basse. Musique baroque, rock prog. 70'</li>
                     </ul>
