--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
                 <h1 class="name">Mathias Bayon</h1>
-                <h3 class="tagline">Business analyst / Ingénieur d'étude et développement</h3>
+                <h2 class="tagline">30 ans</h3>
+                <br>
+                <h3 class="tagline">Business analyst / Ingénieur études et développement</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
@@ -44,16 +46,20 @@
             <div class="education-container container-block">
                 <h2 class="container-block-title">Formation</h2>
                 <div class="item">
-                    <h4 class="degree">Master 2 IUP Génie Informatique spécialité « Conception de Logiciels / Design Patterns »</h4>
+                    <h4 class="degree">Master 2 IUP Génie Informatique</h4>
                     <h6 class="specialty">Spécialité « Conception de Logiciels / Design Patterns »</h5>
                         <h5 class="meta">Université de Bretagne Occidentale (UBO)</h5>
-						<h6 class="meta">Stages de fin d'études : IPEV (IFREMER), ESC Brest, Sopra-Steria Rennes</h6>
+						<h6 class="meta">Stages de fin d'études : <ul>
+                        <li>IPEV (IFREMER)</li>
+                        <li>ESC Brest</li>
+                        <li>Sopra-Steria Rennes</li></ul></h6>
                         <div class="time">2006 - 2008</div>
                     </div><!--//item-->
                     <div class="item">
                         <h4 class="degree">DUT Génie Informatique</h4>
                         <h5 class="meta">IUT Lannion</h5>
-						<h6 class="meta">Stage de fin d'études : FAROS Lannion</h5>
+						<h6 class="meta">Stage de fin d'études :
+                        <ul><li>FAROS Lannion</li></ul></h5>
                         <div class="time">2004 - 2005</div>
                     </div><!--//item-->
                     <div class="item">
@@ -67,7 +73,7 @@
                     <h2 class="container-block-title">Langues étrangères</h2>
                     <ul class="list-unstyled interests-list">
                         <li>Anglais <span class="lang-desc">Très bon niveau</span></li>
-                        <li>Allemand, russe <span class="lang-desc">Notions</span></li>
+                        <li>Allemand, Russe <span class="lang-desc">Notions</span></li>
                     </ul>
                 </div><!--//interests-->
 
@@ -76,7 +82,8 @@
                     <ul class="list-unstyled interests-list">
                         <li>Plongée sous-marine</li>
                         <li>Apnée / natation</li>
-                        <li>Pratique du piano et la guitare basse. Musique baroque, rock prog. 70'</li>
+                        <li>Pratique du piano et de la guitare basse</li>
+                        <li>Interêt pour la musique baroque et le rock prog. 70'</li>
                     </ul>
                 </div><!--//interests-->
 				
@@ -99,9 +106,9 @@
 						   <ul type="disc">
                            <li>Analyse, modélisation (UML) et conception</li>
 						   <li>Gestion des exigences (Requirements management)</li>
-						   <li>Réalisation de propositions commerciales et devis</li>
-                           <li>Qualification, testing</li>
-                           <li>Connaissance du métier, des processus et outils client OBS, OPT, DGA</li>
+						   <li>Réalisation de propositions commerciales et de devis</li>
+                           <li>Testing manuel et automatisé</li>
+                           <li>Connaissance du métier, des processus et des outils client OBS, OPT, DGA</li>
                            <li>Missions dans un contexte francophone ou anglophone</li>
                            <li>Expertise produit ERP Oracle e-Business Suite
                            <ul>
@@ -110,7 +117,7 @@
                                <li><small>Oracle Payables (Comptabilité auxiliaire - fournisseur)</small></li>
                                <li><small>Oracle General Ledger - AX (Comptabilité Générale)</small></li>
                                <li><small>Oracle Inventory & BOM (Stocks)</small></li>
-                               <li><small>Oracle Human resources (Ressources humaines)</small></li>
+                               <li><small>Oracle Human Resources (Ressources humaines)</small></li>
                            </ul></li>
                            <li>Connaissance du produit Planisware (P5 OPX2)</li>
 						   </ul>
@@ -119,11 +126,11 @@
 							   <ul type="disc">
 							   <li>Systèmes</li>
 							   <ul>
-                               <li><small>UNIX / Windows / Mac OSX</small></li>
+                               <li><small>UNIX, Windows, Mac OSX</small></li>
 							   </ul></li>
                                <li>Bases de données</li>
 							   <ul>
-                               <li><small>Oracle / MYSQL / SQL Server / Sqlitle / Postgre</small></li>
+                               <li><small>Oracle, MySQL, SQL Server, Sqlite, Postgre</small></li>
 							   </ul></li>
                                <li>Langages</li>
 							   <ul>
@@ -131,11 +138,11 @@
 							   </ul></li>
                                <li>Outils</li>
 							   <ul>
-                               <li><small>SAP Business Objects, Crystal Reports, Planisware, Oracle eBusiness Suite (Forms, Reports, Discoverer, WebADI, XMLPublisher, JDevelopper, SQL*Developper, iSetup, Dataload), HP ALM & HP Quick Test Pro, Jenkins, Selenium, SublimeText, SVN, CVS, GIT</small></li>
+                               <li><small>SAP Business Objects, Crystal Reports, Planisware, Oracle eBusiness Suite (Forms, Reports, Discoverer, WebADI, XMLPublisher, JDevelopper, SQL*Developper, iSetup, Dataload), HP ALM & HP Quick Test Pro, Jenkins, Selenium, SublimeText, SVN, CVS, GIT, Alfresco</small></li>
 							   </ul></li>
                                <li>Divers</li>
 							   <ul>
-                               <li><small>Expertise SQL / PLSQL / Tuning SQL et connaissances en Administration de bases de données Oracle / Postgre</small>
+                               <li><small>Expertise SQL, PLSQL, Tuning SQL et connaissances en Administration de bases de données Oracle et Postgre</small>
 							   </ul></li>
 							   </ul>
 							</ul>
@@ -144,13 +151,13 @@
 
                        <section class="section experiences-section">
                         <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
-						<p>8 ans d'expérience professionnelle, chez Sopra-Steria</p>
+						<p>8 ans d'expérience professionnelle chez Sopra-Steria</p>
                         <div class="item">
                             <div class="meta">
                                 <div class="upper-row">
                                     <h3 class="job-title">Projet A, client : Direction Générale de l'Armement</h3>
-                                    <h4 class="job-title"><small><b>Domaine fonctionnel :</b> programmes d'armement</small></h4>
-                                    <div class="time">2014 - Présent</div>
+                                    <h4 class="job-title"><small><b>Domaine fonctionnel :</b> gestion des programmes d'armement</small></h4>
+                                    <div class="time">2014 - 2016</div>
                                 </div><!--//upper-row-->
                                 <div class="company"><b>Mission :</b> business analysis, testing</div>
                             </div><!--//meta-->
@@ -160,12 +167,13 @@
                                 <li>Responsable fonctionnel de l’application A2 (Application de reporting financier basée sur Business Objects)</li>
                                 <li>Participation au transfert du projet de Paris à Rennes</li>
                                 <li>Formation et aide à la montée en compétence d’autres acteurs</li>
+                                <li>Réalisation d'ateliers avec la DGA</li>
                                 <li>Rédaction d’estimations, de devis, de propositions commerciales, de spécifications fonctionnelles</li>
                                 <li>Réalisation et chiffrage d’une étude de refonte complète des processus fonctionnels de l’application A1 (Gestion d’immobilisations)</li>
-								<li>Rétro-spécification générale complète de l'application A1.
-                                <li>Gestion des exigences, qualification des versions (HPQC)</li>
+								<li>Rétro-spécification générale complète de l'application A1</li>
+                                <li>Gestion des exigences, qualification (HP ALM), gestion des livrables</li>
                                 </ul>
-                                <p>Environnement : Planisware OPX2, gestion de projet / immobilisations / valorisation</p>
+                                <p>Environnement : Planisware OPX2, gestion de projet, immobilisations, valorisation</p>
                                 </div><!--//details-->
                             </div><!--//item-->
                             <div class="item">
@@ -173,7 +181,7 @@
                                     <div class="upper-row">
 									<h3 class="job-title">Projet BUFFLE, client : OPT (Nouvelle Calédonie)</h3>
 									<h4 class="job-title"><small><b>Domaine fonctionnel :</b> administration publique, gestion des stocks</small></h4>
-                                    <div class="time">2014 - Présent</div>
+                                    <div class="time">2012 - 2014</div>
                                     </div><!--//upper-row-->
                                     <div class="company"><b>Mission :</b> responsable applicatif, testing, expertise fonctionnelle et technique, assistance MOA</div>
                                 </div><!--//meta-->
@@ -185,36 +193,35 @@
                                     <li>Formation et aide à la montée en compétence d’autres acteurs</li>
                                     <li>Développement de versions (PLSQL, Reports)</li>
                                     <li>Expertise tuning SQL / optimisation de traitements</li>
-                                    <li>Qualification</li>
-                                    <li>Réponse appel d’offre relatif à la mise en place d’un système de gestion du recouvrement / contentieux</li>
-                                    <li>Environnement : Oracle e-Business Suite, modules de facturation / comptabilité / logistique, inventaire / immobilisations / prise de commande</li>
-									</ul>
+                                    <li>Gestion des exigences, qualification (HP ALM), gestion des livrables</li>
+                                    <li>Réponse à un appel d’offre relatif à la mise en place d’un système de gestion du recouvrement et du contentieux</li></ul>
+                                    <p>Environnement : Oracle e-Business Suite, modules de facturation / comptabilité / logistique, inventaire / immobilisations / prise de commande</p>
                                     </div><!--//details-->
                                 </div><!--//item-->
                                 <div class="item">
                                     <div class="meta">
                                         <div class="upper-row">
-                                            <h3 class="job-title">Projet 50D - Orange Business Services</h3>
+                                            <h3 class="job-title">Projet 50D, client : Orange Business Services</h3>
 											<h4 class="job-title"><small><b>Domaine fonctionnel :</b> facturation grands comptes, comptabilité auxiliaire</small></h4>
-                                            <div class="time">Mars 2010 - Aout 2014</div>
+                                            <div class="time">2010 - 2014</div>
                                         </div><!--//upper-row-->
                                         <div class="company"><b>Mission :</b> testing, maîtrise d’œuvre, support</div>
                                     </div><!--//meta-->
                                     <div class="details">
 									<ul type="disc">
                                         <li>Support N3 (Résolution de tickets, assistance MOE / MOA)</li>
-                                        <li>Qualification interne et recette MOE déléguée</li>
+                                        <li>Gestion des exigences, qualification (HP ALM), recette MOE déléguée, gestion des livrables</li>
                                         <li>Développement de versions</li>
-                                        </p>
+                                        <p>Environnement : Oracle e-Business Suite, modules de comptabilité générale et auxiliaire.</p>
 										</ul>
                                     </div><!--//details-->
                                 </div><!--//item-->
                                 <div class="item">
                                     <div class="meta">
                                         <div class="upper-row">
-                                            <h3 class="job-title">Projet SMIS - Orange Business Service</h3>
+                                            <h3 class="job-title">Projet SMIS, client : Orange Business Service</h3>
 											<h4 class="job-title"><small><b>Domaine fonctionnel :</b> management de programmes, P&L, reporting stratégique</small></h4>
-                                            <div class="time">Septembre 2008 – Aout 2014</div>
+                                            <div class="time">2008 – 2014</div>
                                         </div><!--//upper-row-->
                                         <div class="company"><b>Mission :</b> responsable applicatif, testing, expertise fonctionnelle et technique, assistance MOA</div>
                                     </div><!--//meta-->
@@ -225,40 +232,33 @@
                                         <li>Réalisation des opérations de clôture comptable avec la MOA SMIS</li>
                                         <li>Rédaction des propositions commerciales</li>
 										<li>Réalisation des spécifications fonctionnelles et techniques</li>
-                                        <li>Gestion des exigences</li>
+                                        <li>Gestion des exigences, qualification (HP ALM), gestion des livrables</li>
                                         <li>Formation et aide à la montée en compétence d’autres acteurs</li>
                                         <li>Développement de versions (JAVA J2EE, PL/SQL, Forms, Reports)</li>
-                                        <li>Qualification</li>
-                                        <li>Support (Résolution de tickets, assistance MOE / MOA)</li>
-                                        <li>Contexte anglophone (Support éditeur en Inde, intégralité des documents rédigés en anglais)</li>
+                                        <li>Support (Résolution de tickets, assistance MOE et MOA)</li>
+                                        <li>Contexte anglophone (Support éditeur en Inde, intégralité des documents rédigée en anglais)</li>
 										</ul>
+                                        <p>Environnement : Oracle e-Business Suite, gestion de projet, gestion de rentabilité</p>
                                     </div><!--//details-->
                                 </div><!--//item-->
                                 <div class="item">
                                     <div class="meta">
                                         <div class="upper-row">
-                                            <h3 class="job-title">Projet OSCAR - Orange Business Services</h3>
+                                            <h3 class="job-title">Projet OSCAR, client : Orange Business Services</h3>
 											<h4 class="job-title"><small><b>Domaine fonctionnel :</b> network provisioning</small></h4>
-                                            <div class="time">Mars à Août 2008</div>
+                                            <div class="time">2008</div>
                                         </div><!--//upper-row-->
                                         <div class="company"><b>Mission :</b> développement, testing</div>
                                     </div><!--//meta-->
                                     <div class="details">
 									<ul type="disc">
-                                        <li>Réalisation d’un automate de tests de non régression automatisé, basé sur les outils HP ALM et HP Quick Test Pro</li>
+                                        <li>Réalisation d’un automate de tests de non régression, basé sur les outils HP ALM et HP Quick Test Pro</li>
 									</ul>
                                     </div><!--//details-->
                                 </div><!--//item-->
                             </section><!--//section-->
                     </div><!--//main-body-->
                 </div>
-
-                <footer class="footer">
-                    <div class="text-center">
-                        <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-                        <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
-                    </div><!--//container-->
-                </footer><!--//footer-->
 
                 <!-- Javascript -->          
                 <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
