--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
   									</ul>
   									<li>Langages</li>
   									<ul>
-  										<li><small>SQL, PL/SQL, Java / J2EE, C, UNIX Shell, Ruby / Rails, Javascript / JQuery, HTML, CSS</small></li>
+  										<li><small>SQL, PL/SQL, Java/J2EE, C, UNIX Shell, Ruby / Rails, Javascript / JQuery, HTML, CSS</small></li>
   									</ul>
   									<li>Outils</li>
   									<ul>
-  										<li><small>SAP Business Objects, Crystal Reports, Planisware, Oracle eBusiness Suite (Forms, Reports, Discoverer, WebADI, XMLPublisher, JDevelopper, SQL*Developper, iSetup, Dataload), HP ALM & HP Quick Test Pro, Jenkins, Selenium, SublimeText, SVN, CVS, GIT, Alfresco</small></li>
+  										<li><small>HP ALM & HP Quick Test Pro, SAP Business Objects, Crystal Reports, Planisware, Oracle eBusiness Suite (Forms, Reports, Discoverer, WebADI, XMLPublisher, JDevelopper, SQL*Developper, iSetup, Dataload), Jenkins, Selenium, SublimeText, SVN, CVS, GIT, Alfresco</small></li>
   									</ul>
   									<li>Divers</li>
   									<ul>
@@ -161,7 +161,7 @@
   							</div><!--//meta-->
   							<div class="details">
   								<ul type="disc">
-  									<li>Responsable fonctionnel de l’application A1 (Application spécifique de valorisation d’actifs comptables – Gestion d’immobilisations)</li>
+  									<li>Responsable fonctionnel de l’application A1 (Application de valorisation d’actifs comptables – Gestion d’immobilisations)</li>
   									<li>Responsable fonctionnel de l’application A2 (Application de reporting financier basée sur Business Objects)</li>
   									<li>Participation au transfert du projet de Paris à Rennes</li>
   									<li>Formation et aide à la montée en compétence d’autres acteurs</li>
@@ -169,9 +169,9 @@
   									<li>Rédaction d’estimations, de devis, de propositions commerciales, de spécifications fonctionnelles</li>
   									<li>Réalisation et chiffrage d’une étude de refonte complète des processus fonctionnels de l’application A1 (Gestion d’immobilisations)</li>
   									<li>Rétro-spécification générale complète de l'application A1</li>
-  									<li>Gestion des exigences, qualification (HP ALM), gestion des livrables</li>
+  									<li>Gestion des exigences, qualification, gestion des livrables</li>
   								</ul>
-  								<p>Environnement : Planisware OPX2, gestion de projet, immobilisations, valorisation</p>
+  								<p>Environnement : Planisware OPX2, gestion de projets, immobilisations, valorisation</p>
   							</div><!--//details-->
   						</div><!--//item-->
   						<div class="item">
@@ -191,7 +191,7 @@
   									<li>Formation et aide à la montée en compétence d’autres acteurs</li>
   									<li>Développement de versions (PLSQL, Reports)</li>
   									<li>Expertise tuning SQL / optimisation de traitements</li>
-  									<li>Gestion des exigences, qualification (HP ALM), gestion des livrables</li>
+  									<li>Gestion des exigences, qualification, gestion des livrables</li>
   									<li>Réponse à un appel d’offre relatif à la mise en place d’un système de gestion du recouvrement et du contentieux</li></ul>
   									<p>Environnement : Oracle e-Business Suite, modules de facturation, comptabilité, logistique, inventaire, immobilisations, prise de commande</p>
   								</div><!--//details-->
@@ -208,9 +208,9 @@
   								<div class="details">
   									<ul type="disc">
   										<li>Support N3 (Résolution de tickets, assistance MOE et MOA)</li>
-  										<li>Gestion des exigences, qualification (HP ALM), recette MOE déléguée, gestion des livrables</li>
+  										<li>Gestion des exigences, qualification, recette MOE déléguée, gestion des livrables</li>
   										<li>Développement de versions</li>
-  										<p>Environnement : Oracle e-Business Suite, modules de comptabilité générale et auxiliaire.</p>
+  										<p>Environnement : Oracle e-Business Suite, modules de comptabilité générale et auxiliaire</p>
   									</ul>
   								</div><!--//details-->
   							</div><!--//item-->
@@ -230,9 +230,9 @@
   										<li>Réalisation des opérations de clôture comptable avec la MOA SMIS</li>
   										<li>Rédaction des propositions commerciales</li>
   										<li>Réalisation des spécifications fonctionnelles et techniques</li>
-  										<li>Gestion des exigences, qualification (HP ALM), gestion des livrables</li>
+  										<li>Gestion des exigences, qualification, gestion des livrables</li>
   										<li>Formation et aide à la montée en compétence d’autres acteurs</li>
-  										<li>Développement de versions (JAVA J2EE, PL/SQL, Forms, Reports)</li>
+  										<li>Développement de versions (JAVA/J2EE, PL/SQL, Forms, Reports)</li>
   										<li>Support (Résolution de tickets, assistance MOE et MOA)</li>
   										<li>Contexte anglophone (Support éditeur en Inde, intégralité des documents rédigée en anglais)</li>
   									</ul>
