--- a/index.html
+++ b/index.html
@@ -105,11 +105,9 @@
                            <h4></h4>
 						   <ul type="disc">
                            <li>Analyse, modélisation (UML) et conception</li>
-						   <li>Gestion des exigences (Requirements management)</li>
+						   <li>Gestion des exigences</li>
 						   <li>Réalisation de propositions commerciales et de devis</li>
-                           <li>Testing manuel et automatisé</li>
-                           <li>Connaissance du métier, des processus et des outils client OBS, OPT, DGA</li>
-                           <li>Missions dans un contexte francophone ou anglophone</li>
+                           <li>Expertise testing manuel et automatisé, stratégies de test</li>
                            <li>Expertise produit ERP Oracle e-Business Suite
                            <ul>
                                <li><small>Oracle Project Costing, Billing, Intelligence & Management (Gestion de projets) - Formation Oracle University – 2009</small></li>
@@ -120,6 +118,7 @@
                                <li><small>Oracle Human Resources (Ressources humaines)</small></li>
                            </ul></li>
                            <li>Connaissance du produit Planisware (P5 OPX2)</li>
+                           <li>Capacité à travailler dans un contexte francophone ou anglophone</li>
 						   </ul>
                            <h3>Compétences techniques<h3>
                                <h4></h4>
@@ -155,7 +154,7 @@
                         <div class="item">
                             <div class="meta">
                                 <div class="upper-row">
-                                    <h3 class="job-title">Projet A, client : Direction Générale de l'Armement</h3>
+                                    <h3 class="job-title">Projet A, client : Direction Générale de l'Armement (DGA)</h3>
                                     <h4 class="job-title"><small><b>Domaine fonctionnel :</b> gestion des programmes d'armement</small></h4>
                                     <div class="time">2014 - 2016</div>
                                 </div><!--//upper-row-->
@@ -167,13 +166,13 @@
                                 <li>Responsable fonctionnel de l’application A2 (Application de reporting financier basée sur Business Objects)</li>
                                 <li>Participation au transfert du projet de Paris à Rennes</li>
                                 <li>Formation et aide à la montée en compétence d’autres acteurs</li>
-                                <li>Réalisation d'ateliers avec la DGA</li>
+                                <li>Réalisation en autonomie totale d'ateliers de cadrage avec la MOA DGA</li>
                                 <li>Rédaction d’estimations, de devis, de propositions commerciales, de spécifications fonctionnelles</li>
                                 <li>Réalisation et chiffrage d’une étude de refonte complète des processus fonctionnels de l’application A1 (Gestion d’immobilisations)</li>
 								<li>Rétro-spécification générale complète de l'application A1</li>
-                                <li>Gestion des exigences, qualification (HP ALM), gestion des livrables</li>
+                                <li>Gestion des exigences, préparation et éxécution des campagnes de test, gestion des livrables</li>
                                 </ul>
-                                <p>Environnement : Planisware OPX2, gestion de projet, immobilisations, valorisation</p>
+                                <p>Environnement : Planisware OPX2, gestion de projet, immobilisations, valorisation d'actifs</p>
                                 </div><!--//details-->
                             </div><!--//item-->
                             <div class="item">
@@ -183,18 +182,18 @@
 									<h4 class="job-title"><small><b>Domaine fonctionnel :</b> administration publique, gestion des stocks</small></h4>
                                     <div class="time">2012 - 2014</div>
                                     </div><!--//upper-row-->
-                                    <div class="company"><b>Mission :</b> responsable applicatif, testing, expertise fonctionnelle et technique, assistance MOA</div>
+                                    <div class="company"><b>Mission :</b> testing, expertise fonctionnelle et technique sur ERP, assistance MOA</div>
                                 </div><!--//meta-->
                                 <div class="details">
 								<ul type="disc">
+                                    <li>Responsable fonctionnel et technique de l'application</li>
                                     <li>Participation au transfert du projet de Nantes à Rennes</li>
-                                    <li>Rédaction d’estimations, de spécifications fonctionnelles et techniques</li>
-                                    <li>Gestion des exigences</li>
                                     <li>Formation et aide à la montée en compétence d’autres acteurs</li>
-                                    <li>Développement de versions (PLSQL, Reports)</li>
+                                    <li>Rédaction d’estimations, de devis, de propositions commerciales, de spécifications fonctionnelles et techniques</li>
+                                    <li>Gestion des exigences, préparation et éxécution des campagnes de test, gestion des livrables</li>
+                                    <li>Développement de versions (PLSQL, Reports, Discoverer)</li>
                                     <li>Expertise tuning SQL / optimisation de traitements</li>
-                                    <li>Gestion des exigences, qualification (HP ALM), gestion des livrables</li>
-                                    <li>Réponse à un appel d’offre relatif à la mise en place d’un système de gestion du recouvrement et du contentieux</li></ul>
+                                    <li>Réponse à un appel d’offre relatif à la mise en place d’un système de gestion du recouvrement et du contentieux (1M€)</li></ul>
                                     <p>Environnement : Oracle e-Business Suite, modules de facturation / comptabilité / logistique, inventaire / immobilisations / prise de commande</p>
                                     </div><!--//details-->
                                 </div><!--//item-->
@@ -210,7 +209,7 @@
                                     <div class="details">
 									<ul type="disc">
                                         <li>Support N3 (Résolution de tickets, assistance MOE / MOA)</li>
-                                        <li>Gestion des exigences, qualification (HP ALM), recette MOE déléguée, gestion des livrables</li>
+                                        <li>Gestion des exigences, préparation et éxécution des campagnes de test, recette MOE déléguée, gestion des livrables</li>
                                         <li>Développement de versions</li>
                                         <p>Environnement : Oracle e-Business Suite, modules de comptabilité générale et auxiliaire.</p>
 										</ul>
@@ -232,7 +231,8 @@
                                         <li>Réalisation des opérations de clôture comptable avec la MOA SMIS</li>
                                         <li>Rédaction des propositions commerciales</li>
 										<li>Réalisation des spécifications fonctionnelles et techniques</li>
-                                        <li>Gestion des exigences, qualification (HP ALM), gestion des livrables</li>
+                                        <li>Rédaction d’estimations, de devis, de propositions commerciales, de spécifications fonctionnelles et techniques</li>
+                                        <li>Gestion des exigences, préparation et éxécution des campagnes de test, gestion des livrables</li>
                                         <li>Formation et aide à la montée en compétence d’autres acteurs</li>
                                         <li>Développement de versions (JAVA J2EE, PL/SQL, Forms, Reports)</li>
                                         <li>Support (Résolution de tickets, assistance MOE et MOA)</li>
